--- a/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title = "Hello World" icon-name="custom:custom14">
         <div class="slds-m-around_medium">
-            <p>Hello {greeting}!</p>
+            <p>Hello0 {greeting}!</p>
             <lightning-input lable ="Name" value={greeting} onchange={changeHandler}></lightning-input>
         </div>
     </lightning-card>
